replace category bg colors and fix vertical alignment

--- a/WhatToDo.Website/ClientApp/src/styles.css
+++ b/WhatToDo.Website/ClientApp/src/styles.css
@@ -5,7 +5,12 @@
 }
 
 .category-badge {
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  box-shadow: 2px 3px 3px 3px rgba(0, 0, 0, .3);
+}
+
+.cat-icon {
+    opacity: 0.8;
 }
